// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Input component Adds optional classes to wrapper 1`] = `
<DocumentFragment>
  <div
    class="ssb-text-area negative error"
  >
    <div
      class="text-area-wrapper"
    >
      <textarea
        id="1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input component Matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="ssb-text-area"
  >
    <div
      class="text-area-wrapper"
    >
      <textarea
        cols="10"
        id="1"
        rows="5"
      />
    </div>
  </div>
</DocumentFragment>
`;
